--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
     "postinstall": "husky install"
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix", "yarn test --findRelatedTests --bail"]
+    "src/**/*": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
+    ]
   },
   "dependencies": {
     "next": "10.1.1",
     "next-pwa": "^5.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sb": "^6.2.8",
-    "styled-components": "5.2.1"
+    "storybook-addon-next-router": "^2.0.4",
+    "styled-components": "5.2.1",
+    "styled-media-query": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-essentials": "6.1.21",
-    "@storybook/react": "6.1.21",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/react": "6.2.9",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.22",
@@ -51,7 +55,6 @@
     "lint-staged": "^10.5.4",
     "plop": "^2.7.4",
     "prettier": "^2.2.1",
-    "storybook-addon-next-router": "^2.0.4",
     "typescript": "^4.2.3"
   }
 }
