--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/material-outlined": "^10.28.0",
     "next": "10.1.1",
     "next-pwa": "^5.0.6",
     "react": "17.0.2",
