--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@styled-icons/remix-fill": "^10.18.0",
     "next": "10.1.1",
     "next-pwa": "^5.0.6",
+    "polished": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "storybook-addon-next-router": "^2.0.4",
