--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "@styled-icons/material-outlined": "^10.28.0",
     "@styled-icons/remix-fill": "^10.18.0",
-    "next": "10.1.1",
+    "next": "^10.1.1",
     "next-pwa": "^5.0.6",
     "polished": "^4.1.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "storybook-addon-next-router": "^2.0.4",
@@ -37,10 +37,11 @@
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/addon-essentials": "6.2.9",
-    "@storybook/react": "6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/react": "^6.2.9",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
