--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "typecheck": "tsc --project tsconfig.json -noEmit",
     "test": "jest --maxWorkers=50%",
     "test:watch": "yarn test --watch --maxWorkers=25%",
+    "schema:download": "apollo client:download-schema --endpoint=http://localhost:1337/graphql schema-temp.gql",
+    "schema:convert": "node convertToNonNull.js",
+    "codegen": "apollo codegen:generate --target typescript --excludes=node_modules/ --includes=src/graphql/**/*.ts --localSchemaFile schema.gql --tagName=gql --outputFlat src/graphql/generated",
+    "types:generate": "yarn schema:download && yarn schema:convert && yarn codegen",
     "generate": "yarn plop --plopfile generators/plopfile.js",
     "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "build-storybook -s ./public",
@@ -22,11 +26,13 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@styled-icons/boxicons-regular": "^10.37.0",
     "@styled-icons/boxicons-solid": "^10.34.0",
     "@styled-icons/fa-brands": "^10.34.0",
     "@styled-icons/material-outlined": "^10.28.0",
     "@styled-icons/remix-fill": "^10.18.0",
+    "graphql": "^15.5.2",
     "next": "^10.1.1",
     "next-pwa": "^5.0.6",
     "polished": "^4.1.2",
@@ -52,6 +58,7 @@
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "apollo": "^2.33.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.23.0",
